--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,24 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=7.3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "PSLegalcompliance\\": "src/"
+    },
+    "classmap": [
+      "ps_legalcompliance.php",
+      "classes/",
+      "entities/"
+    ],
+    "exclude-from-classmap": []
   },
   "config": {
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "classmap-authoritative": true,
+    "prepend-autoloader": false,
+    "optimize-autoloader": true
   },
   "type": "prestashop-module"
 }
